--- a/templates/home.html
+++ b/templates/home.html
@@ -61,7 +61,8 @@
 				{% for row in data %}
 				<td>
 					<a href="/productDescription?productId={{row[0]}}">
-						<img src={{ 'https://ecommercecdnendpoint.azureedge.net/' + row[4] }} id="itemImage" />
+						<!--img src={{ 'https://ecommercecdnendpoint.azureedge.net/' + row[4] }} id="itemImage" /!-->
+						<img src={{ 'https://cdnstorageaccount2.blob.core.windows.net/ecomblobcontainer/' + row[4] }} id="itemImage" />
 					</a>
 				</td>
 				{% endfor %}
