Cart + Catalog fix

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -44,7 +44,8 @@
 		<div>
 			<hr id="seperator">
 			<div id="itemImage">
-				<img src={{'https://ecommercecdnendpoint.azureedge.net/'+row[3]}} id="image"/>
+				<!--img src={{'https://ecommercecdnendpoint.azureedge.net/'+row[3]}} id="image"/!-->
+				<img src={{ 'https://cdnstorageaccount2.blob.core.windows.net/ecomblobcontainer/' + row[3] }} id="image" />
 			</div>
 			<div id="itemName">
 				<span id="itemNameTag">{{row[1]}}</span><br>
