--- a/templates/displayCategory.html
+++ b/templates/displayCategory.html
@@ -53,7 +53,8 @@
 			{% for row in itemData %}
 			<td>
 				<a href="/productDescription?productId={{row[0]}}">
-					<img src={{ 'https://ecommercecdnendpoint.azureedge.net/' + row[3] }} id="itemImage" />
+					<!--img src={{ 'https://ecommercecdnendpoint.azureedge.net/' + row[3] }} id="itemImage" /!-->
+					<img src={{ 'https://cdnstorageaccount2.blob.core.windows.net/ecomblobcontainer/' + row[3] }} id="itemImage" />
 				</a>
 			</td>
 			{% endfor %}
